# SWE-bench-testsuite

./: .gitignore  .gitmodules  evaluate.py  pyproject.toml  readme.md  requirements.txt  run_llama.py  setup.sh  test_eval.py
src/: README.md  __init__.py  evaluate.py  inference.py
tests/: README.md  __init__.py  test_integration.py  test_setup.py
